# contextprime-domain

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
contextprime_domain/: __init__.py  base.py  cli.py  legal.py  loader.py  manifest.py  registry.py
docs/: ARCHITECTURE.md  AUTHORING.md  PUBLISHING.md
examples/contracts/: domain_pack.yaml
examples/contracts/benchmarks/: contract_eval.jsonl
tests/: test_domain_platform.py
